# ml-pizza-price-predictor

./: .gitignore  README.md  app.py  pyproject.toml  tests.ipynb
src/ml_pizza_price_predictor/: app.py
